force-app/main/default/objects/PackageUsageSummary__c/PackageUsageSummary__c.object-meta.xml
<CustomObject>
    <label>Package Usage Summary</label>
    <nameField>
        <displayFormat>PUS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>