force-app/main/default/objects/PackageUsageSummary__c/fields/ext_OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>ext_OrganizationId__c</fullName>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>