force-app/main/default/objects/PackageUsageSummary__c/fields/ext_PackageId__c.field-meta.xml
<CustomField>
    <fullName>ext_PackageId__c</fullName>
    <label>Package ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>