force-app/main/default/objects/PackageUsageSummary__c/fields/num_Reads__c.field-meta.xml
<CustomField>
    <fullName>num_Reads__c</fullName>
    <label>Num Reads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>