force-app/main/default/objects/PackageUsageSummary__c/fields/txt_CustomEntity__c.field-meta.xml
<CustomField>
    <fullName>txt_CustomEntity__c</fullName>
    <label>Custom Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>