force-app/main/default/objects/PackageUsageSummary__c/fields/txt_CustomEntityType__c.field-meta.xml
<CustomField>
    <fullName>txt_CustomEntityType__c</fullName>
    <label>Custom Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>