force-app/main/default/objects/PackageUsageSummary__c/fields/txt_ManagedPackageNamespace__c.field-meta.xml
<CustomField>
    <fullName>txt_ManagedPackageNamespace__c</fullName>
    <label>Managed Package Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>