force-app/main/default/objects/PackageUsageSummary__c/fields/txt_Month__c.field-meta.xml
<CustomField>
    <fullName>txt_Month__c</fullName>
    <label>Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>