force-app/main/default/objects/PackageUsageSummary__c/fields/txt_UserIdToken__c.field-meta.xml
<CustomField>
    <fullName>txt_UserIdToken__c</fullName>
    <label>User ID Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>