force-app/main/default/objects/PackageUsageSummary__c/fields/txt_UserType__c.field-meta.xml
<CustomField>
    <fullName>txt_UserType__c</fullName>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>